--- a/plugins/Lands/Language/fr-FR.yml
+++ b/plugins/Lands/Language/fr-FR.yml
@@ -5,7 +5,7 @@
 # Discord: https://discord.gg/B4MAJVk
 # 
 # ###############################
-# About chat message type system:
+# About chat message type system:zz
 # Does only work for messages in
 # "message" or "command" section.
 # ###############################
